force-app/main/default/objects/Collection_management__c/Collection_management__c.object-meta.xml
<CustomObject>
    <label>ניהול גביה</label>
    <nameField>
        <label>הכנסה לגבייה</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ניהול גביה</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>