force-app/main/default/objects/Collection_management__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>לקוח</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ניהול גביה</relationshipLabel>
    <relationshipName>Collections_management_acc_del</relationshipName>
    <type>Lookup</type>
</CustomField>