force-app/main/default/objects/Collection_management__c/fields/Account_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Account_Grouping__c</fullName>
    <formula>TEXT( Account__r.Account_Grouping__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סיווג לקוח</label>
    <type>Text</type>
</CustomField>