force-app/main/default/objects/Collection_management__c/fields/Adjusted_Unpaid_Premium__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Unpaid_Premium__c</fullName>
    <formula>Elementar_Policy__r.Adjusted_Unpaid_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Unpaid Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>