force-app/main/default/objects/Collection_management__c/fields/Agency_Fee_Currency_incom__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_Currency_incom__c</fullName>
    <formula>TEXT(Income__r.Novidea_HPC__Agency_Fee_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מטבע שכ&quot;ט מהכנסה</label>
    <type>Text</type>
</CustomField>