force-app/main/default/objects/Collection_management__c/fields/Agency_Fee_income__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_income__c</fullName>
    <formula>Income__r.Novidea_HPC__Agency_Fee__c</formula>
    <label>שכ&quot;ט מהכנסה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>