force-app/main/default/objects/Collection_management__c/fields/Agency_Fees_Currency__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fees_Currency__c</fullName>
    <formula>TEXT(Elementar_Policy__r.Novidea_HPC__Agency_Fees_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מטבע שכ&quot;ט</label>
    <type>Text</type>
</CustomField>