force-app/main/default/objects/Collection_management__c/fields/agent_name__c.field-meta.xml
<CustomField>
    <fullName>agent_name__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Broker_In_Carrier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם סוכן</label>
    <type>Text</type>
</CustomField>