force-app/main/default/objects/Collection_management__c/fields/B_Premium_Income__c.field-meta.xml
<CustomField>
    <fullName>B_Premium_Income__c</fullName>
    <formula>Income__r.Premium_Bruto__c</formula>
    <label>פרמיה ברוטו מהכנסה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>