force-app/main/default/objects/Collection_management__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <formula>Elementar_Policy__r.Is_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>הופקה חשבונית</label>
    <type>Checkbox</type>
</CustomField>