force-app/main/default/objects/Collection_management__c/fields/Carrier_Income__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Income__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Carrier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מבטח</label>
    <type>Text</type>
</CustomField>