force-app/main/default/objects/Collection_management__c/fields/collector_from_account__c.field-meta.xml
<CustomField>
    <fullName>collector_from_account__c</fullName>
    <formula>Account__r.Collection_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>גובה מטפל מחשבון</label>
    <type>Text</type>
</CustomField>