force-app/main/default/objects/Collection_management__c/fields/Date_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Contact__c</fullName>
    <label>מועד ליצירת קשר</label>
    <type>Date</type>
</CustomField>