force-app/main/default/objects/Collection_management__c/fields/Debt_settlement__c.field-meta.xml
<CustomField>
    <fullName>Debt_settlement__c</fullName>
    <formula>TEXT(Elementar_Policy__r.Field2DebtAging__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>גיול חוב</label>
    <type>Text</type>
</CustomField>