force-app/main/default/objects/Collection_management__c/fields/Effective_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_date__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך תחילת ביטוח</label>
    <type>Date</type>
</CustomField>