force-app/main/default/objects/Collection_management__c/fields/Elementar_Policy__c.field-meta.xml
<CustomField>
    <fullName>Elementar_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פוליסה</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipLabel>ניהול גביה</relationshipLabel>
    <relationshipName>Elementar_Policy_Integ</relationshipName>
    <type>Lookup</type>
</CustomField>