force-app/main/default/objects/Collection_management__c/fields/Endorsement_Number__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Number__c</fullName>
    <formula>Income__r.Novidea_HPC__Endorsement_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מספר תוספת/שינוי</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>