force-app/main/default/objects/Collection_management__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>הכנסה</label>
    <referenceTo>Novidea_HPC__Income__c</referenceTo>
    <relationshipLabel>ניהול גביה</relationshipLabel>
    <relationshipName>Income_in</relationshipName>
    <type>Lookup</type>
</CustomField>