force-app/main/default/objects/Collection_management__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT(Account__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>לקוח: תעשיה</label>
    <type>Text</type>
</CustomField>