force-app/main/default/objects/Collection_management__c/fields/Insurance_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Reminder__c</fullName>
    <label>מבטח לתזכורת</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מנורה</fullName>
            </value>
            <value>
                <fullName>איילון</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>הכשרה</fullName>
            </value>
            <value>
                <fullName>הפניקס</fullName>
            </value>
            <value>
                <fullName>הראל</fullName>
            </value>
            <value>
                <fullName>כלל</fullName>
            </value>
            <value>
                <fullName>מגדל</fullName>
            </value>
            <value>
                <fullName>שלמה</fullName>
            </value>
            <value>
                <fullName>חקלאי</fullName>
            </value>
            <value>
                <fullName>לונדון</fullName>
            </value>
            <value>
                <fullName>פרייס פורבס</fullName>
            </value>
            <value>
                <fullName>גאסט קריגר</fullName>
            </value>
            <value>
                <fullName>WS</fullName>
            </value>
            <value>
                <fullName>CFC</fullName>
            </value>
            <value>
                <fullName>סלה גרופ</fullName>
            </value>
            <value>
                <fullName>PRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>