force-app/main/default/objects/Collection_management__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <formula>IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Insurance_Type__c, &apos;Local&apos; ), &apos;מקומי&apos; ,

IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Insurance_Type__c, &apos;Direct&apos; ),&apos;ישיר&apos; ,

IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Insurance_Type__c, &apos;Front&apos; ),&apos;פרונט&apos; ,
&apos;&apos;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סוג ביטוח</label>
    <type>Text</type>
</CustomField>