force-app/main/default/objects/Collection_management__c/fields/Locally_unpaid_premium__c.field-meta.xml
<CustomField>
    <fullName>Locally_unpaid_premium__c</fullName>
    <formula>Elementar_Policy__r.Local_Unpaid_Premium__c</formula>
    <label>פרמיה שלא שולמה לוקלי</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>