force-app/main/default/objects/Collection_management__c/fields/Manual_creation__c.field-meta.xml
<CustomField>
    <fullName>Manual_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הקמה ידנית</label>
    <type>Checkbox</type>
</CustomField>