force-app/main/default/objects/Collection_management__c/fields/Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_ID__c</fullName>
    <formula>Elementar_Policy__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy ID</label>
    <type>Text</type>
</CustomField>