force-app/main/default/objects/Collection_management__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Policy_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מספר הפוליסה</label>
    <type>Text</type>
</CustomField>