force-app/main/default/objects/Collection_management__c/fields/Premium_amount_currency__c.field-meta.xml
<CustomField>
    <fullName>Premium_amount_currency__c</fullName>
    <formula>TEXT(Elementar_Policy__r.Novidea_HPC__Premium_Amount_Currency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מטבע הפרמיה</label>
    <type>Text</type>
</CustomField>