force-app/main/default/objects/Collection_management__c/fields/Premium_currency_income__c.field-meta.xml
<CustomField>
    <fullName>Premium_currency_income__c</fullName>
    <formula>TEXT(Income__r.Novidea_HPC__Premium_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מטבע הפרמיה מהכנסה</label>
    <type>Text</type>
</CustomField>