force-app/main/default/objects/Collection_management__c/fields/Premium_payable__c.field-meta.xml
<CustomField>
    <fullName>Premium_payable__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Premium_to_Pay__c</formula>
    <label>פרמיה לתשלום</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>