force-app/main/default/objects/Collection_management__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Product_Definition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מוצר</label>
    <type>Text</type>
</CustomField>