force-app/main/default/objects/Collection_management__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>הערות</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>