force-app/main/default/objects/Collection_management__c/fields/status_collection__c.field-meta.xml
<CustomField>
    <fullName>status_collection__c</fullName>
    <label>משימה לביצוע</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
                <default>true</default>
                <label>חדש</label>
            </value>
            <value>
                <fullName>תזכורת ראשונה</fullName>
            </value>
            <value>
                <fullName>בדיקת תשלום</fullName>
            </value>
            <value>
                <fullName>מייל שני</fullName>
            </value>
            <value>
                <fullName>מייל חריגה</fullName>
            </value>
            <value>
                <fullName>לשלוח קבלה</fullName>
            </value>
            <value>
                <fullName>מעקב לזיכוי לקוח</fullName>
            </value>
            <value>
                <fullName>תזכורת לתשלום</fullName>
            </value>
            <value>
                <fullName>תזכורת לתשלום תוספת</fullName>
            </value>
            <value>
                <fullName>תשלום תוספת</fullName>
            </value>
            <value>
                <fullName>תשלום שכ&quot;ט</fullName>
            </value>
            <value>
                <fullName>דיווח NCB</fullName>
            </value>
            <value>
                <fullName>פוליסה מדווחת אין דרישה</fullName>
            </value>
            <value>
                <fullName>חוב/זכות אצל המבטח – פוליסה / תוספת לא מדווחת</fullName>
            </value>
            <value>
                <fullName>התראה לפני ביטול</fullName>
            </value>
            <value>
                <fullName>תזכורת להשתתפות עצמית</fullName>
            </value>
            <value>
                <fullName>הושלם</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>