force-app/main/default/objects/Collection_management__c/fields/Status_policy__c.field-meta.xml
<CustomField>
    <fullName>Status_policy__c</fullName>
    <formula>IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Status__c , &apos;Approved Coverage&apos; ), &apos;אישור כיסוי&apos;,

IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Status__c , &apos;Production Updated&apos; ),&apos;עדכון פרודוקציה&apos; ,

IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Status__c , &apos;BOR In Middle period&apos; ),&apos;באמצע תקופה BOR&apos; ,

IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Status__c , &apos;טיפול משפטי ע&quot;י המבטח&apos; ),&apos;טיפול משפטי ע&quot;י המבטח&apos; ,

IF(ISPICKVAL( Elementar_Policy__r.Novidea_HPC__Status__c , &apos;לקראת טיפול משפטי- פנימי&apos; ),&apos;לקראת טיפול משפטי- פנימי&apos;,&apos;&apos;

)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סטטוס פוליסה</label>
    <type>Text</type>
</CustomField>