force-app/main/default/objects/Collection_management__c/fields/Unpaid_Agancy_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Agancy_Fee__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Unpaid_Agency_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שכ&quot;ט שלא שולם</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>