force-app/main/default/objects/Collection_management__c/fields/Unpaid_premium__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_premium__c</fullName>
    <formula>Elementar_Policy__r.Novidea_HPC__Unpaid_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>פרמיה שלא שולמה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>