force-app/main/default/objects/Collection_management__c/recordTypes/Basic.recordType-meta.xml
<RecordType>
    <fullName>Basic</fullName>
    <active>true</active>
    <label>ניהול גביה</label>
</RecordType>