force-app/main/default/objects/Collection_management__c/recordTypes/No_Income_RT.recordType-meta.xml
<RecordType>
    <fullName>No_Income_RT</fullName>
    <active>true</active>
    <label>ניהול גביה ללא הכנסה/פוליסה</label>
</RecordType>