force-app/main/default/objects/Collection_management__c/listViews/All_My_collection.listView-meta.xml
<ListView>
    <fullName>All_My_collection</fullName>
    <columns>NAME</columns>
    <columns>Date_to_Contact__c</columns>
    <columns>status_collection__c</columns>
    <columns>Account__c</columns>
    <columns>Elementar_Policy__c</columns>
    <columns>Income__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Policy_Owner__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>status_collection__c</field>
        <operation>notEqual</operation>
        <value>הושלם</value>
    </filters>
    <label>ניהול הגביה שלי</label>
</ListView>