force-app/main/default/objects/Collection_management__c/listViews/My_Collection.listView-meta.xml
<ListView>
    <fullName>My_Collection</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Date_to_Contact__c</columns>
    <columns>status_collection__c</columns>
    <columns>Insurance_Reminder__c</columns>
    <columns>Account__c</columns>
    <columns>Elementar_Policy__c</columns>
    <columns>Income__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Policy_Owner__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date_to_Contact__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>status_collection__c</field>
        <operation>notEqual</operation>
        <value>הושלם</value>
    </filters>
    <label>היום + תאריך יעד חלף</label>
</ListView>