force-app/main/default/objects/Collection_management__c/listViews/Today_Team.listView-meta.xml
<ListView>
    <fullName>Today_Team</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Account__c</columns>
    <columns>Elementar_Policy__c</columns>
    <columns>NAME</columns>
    <columns>status_collection__c</columns>
    <columns>Date_to_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_to_Contact__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>status_collection__c</field>
        <operation>notEqual</operation>
        <value>הושלם</value>
    </filters>
    <label>צוות - היום</label>
    <sharedTo>
        <role>Collection_Manager</role>
    </sharedTo>
</ListView>