force-app/main/default/objects/Collection_management__c/listViews/Tomorrow_collection.listView-meta.xml
<ListView>
    <fullName>Tomorrow_collection</fullName>
    <columns>NAME</columns>
    <columns>Date_to_Contact__c</columns>
    <columns>status_collection__c</columns>
    <columns>Remarks__c</columns>
    <columns>Account__c</columns>
    <columns>Elementar_Policy__c</columns>
    <columns>Income__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Effective_date__c</columns>
    <columns>Agency_Fee_income__c</columns>
    <columns>B_Premium_Income__c</columns>
    <columns>Policy_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date_to_Contact__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>status_collection__c</field>
        <operation>notEqual</operation>
        <value>הושלם</value>
    </filters>
    <label>מחר</label>
</ListView>